--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,6 +3,7 @@ name: Deploy Documentation
 on:
   release:
     types: [published]
+  workflow_dispatch: {}
 
 jobs:
   deploy:
@@ -15,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.12.2'
+          node-version: '20'
 
       - name: Install dependencies
         run: npm ci
@@ -27,4 +28,4 @@ jobs:
         run: npm run deploy
         env:
           GIT_USER_NAME: 'SamTBalogh'
-          GIT_USER_EMAIL: 'samtambal@alum.us.es'
+          GIT_USER_EMAIL: 'tu.email@example.com'
